k8s/clusters/homelabrestore01/apps/media-operator-indexers/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: indexer-operator-to-prowlarr
  namespace: restore-sonarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: restore-prowlarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: restore-media-operator-indexers
      ports:
        - protocol: TCP
          port: 9696
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: indexer-operator-egress
  namespace: restore-sonarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: restore-media-operator-indexers
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: restore-sonarr
            app.kubernetes.io/name: restore-prowlarr
      toPorts:
        - ports:
            - port: '9696'
              protocol: TCP
